--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ p
     font-weight: 400;
     font-style: normal;
     color: var(--black);
+    font-size: 1.4rem;
 }
 
 h1, h2, h3, h4, h5, h6
@@ -52,6 +53,14 @@ h1, h2, h3, h4, h5, h6
     color: var(--primary);
 }
 
+h1 {font-size: 4.8rem;}
+h2 {font-size: 3.6rem;}
+h3 {font-size: 3.2rem;}
+h4 {font-size: 2.4rem;}
+h5 {font-size: 2rem;}
+h6 {font-size: 1.6rem;}
+h6 {font-size: 1.4rem;}
+h7 {font-size: 1.2rem;}
+h8 {font-size: 1rem;}
 
-  
 
