--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h8 {font-size: 1rem;}
 
 body 
 {
-    background-size: 40px 40px;
+    background-size: 2.4rem 2.4rem;
     background-image:
       linear-gradient(to right, var(--primary--100) 1px, transparent 1px),
       linear-gradient(to bottom, var(--primary--100) 1px, transparent 1px),
