--- a/style.css
+++ b/style.css
@@ -70,10 +70,13 @@ body
       linear-gradient(to right, var(--primary--100) 1px, transparent 1px),
       linear-gradient(to bottom, var(--primary--100) 1px, transparent 1px),
       linear-gradient(to bottom, var(--white), var(--primary--50));
+    padding: 5rem;
   }
 
   .wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 35vw auto;
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
