--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,6 +71,7 @@ body
       linear-gradient(to right, var(--primary--100) 1px, transparent 1px),
       linear-gradient(to bottom, var(--primary--100) 1px, transparent 1px),
       linear-gradient(to bottom, var(--white), var(--primary--50));
-    padding: 5rem;
+    max-width: 100vw;
+    width: 100vw;
   }
  
