--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar">
-  <ul class="nav-list">
-      <li><img src="img/logo.svg" height="40rem"></li>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#contact">Contact</a></li>
-  </ul>
+    <img src="img/logo.svg" class="logo">
+    <ul class="nav-list">
+        <li><a href="#about">Work</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Contact</a></li>
+        <li><a href="#contact">Resume</a></li>
+    </ul>
 </nav>
   
