--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,29 @@
+<app-navigation></app-navigation>
 <section class="hero">
     <div>
         <img src="img/head.svg" class="profile">
     </div>
     <div>
         <div class="introduction">
-            <h1>Hey, I'm Sree!<br>I'm a UX Designer.</h1>
-            <p>I research, I design, I code, and most importantly – <b>I solve problems.</b></p>
+            <h1>Hey, I'm Sree!</h1>
+            <h2>I'm a UX Designer.</h2>
+            <p>I research, I analyze, I code, I test, I make things pretty, and most importantly – <b>I solve problems.</b></p>   
+        </div>
+        <div>
+            <p class="seework">See my work <img src="img/down-arrow.svg"></p>
+        </div>
+        
+    </div>
+</section>
+<section class="hero">
+    <div>
+        <img src="img/head.svg" class="profile">
+    </div>
+    <div>
+        <div class="introduction">
+            <h1>Hey, I'm Sree!</h1>
+            <h2>I'm a UX Designer.</h2>
+            <p>I research, I analyze, I code, I test, I make things pretty, and most importantly – <b>I solve problems.</b></p>   
         </div>
     </div>
 </section>
