--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
     <div>
         <div class="introduction">
-            <h1>Hey, I'm Sree!</h1>
+            <h1>Hey, I'm Sree! 😎</h1>
             <h2>I'm a UX Designer.</h2>
             <p>I research, I analyze, I code, I test, I make things pretty, and most importantly – <b>I solve problems.</b></p>   
         </div>
