--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,16 +3,15 @@
     <div>
         <img src="img/head.svg" class="profile">
     </div>
-    <div>
+    <div class="me">
         <div class="introduction">
             <h1>Hey, I'm Sree! 😎</h1>
             <h2>I'm a UX Designer.</h2>
-            <p>I research, I analyze, I code, I test, I make things pretty, and most importantly – <b>I solve problems.</b></p>   
+            <p>I research, I analyze, I code, I test, I make things pretty, and most importantly – <b>I solve problems</b>.</p>   
         </div>
-        <div>
-            <p class="seework">See my work <img src="img/down-arrow.svg"></p>
-        </div>
-        
+        <div class="see-work">
+            <a href="#"><span>See my work <p id="arrow">⤵</p></span></a>
+        </div>    
     </div>
 </section>
 <section class="hero">
