--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,58 @@
+.me{
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
+}
+
+#arrow
+{
+  margin-top:.5rem;
+  margin-left: 1rem;
+}
+
+a
+{
+  display: inline-block;
+  width: max-content;
+  height: 2rem;
+  font-family: "Sen", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  color: var(--black);
+  font-size: 2rem;
+  text-decoration: none;
+  text-align: center;
+  position: relative;
+  transition: all .35s;
+}
+
+a span{
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: row;
+}
+
+a:after{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: var(--primary);
+  transition: all .35s;
+}
+
+a:hover{
+  color: var(--white);
+}
+
+a:hover:after{
+  width: 100%;
+}
+
 .hero
 {
     display: grid;
@@ -102,7 +157,7 @@
   .introduction h2
   {
     margin: 0;
-    margin-top: 2vh;
+    margin-top: 1.5vh;
     margin-bottom: 2vh;
     font-size: 4rem;
     -webkit-text-stroke-width: 1px;
