--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,7 @@
 <section class="hero">
     <div>
         <img src="img/head.svg" class="profile">
+        <img src="img/logo.png" class="profile">
     </div>
     <div class="me">
         <div class="introduction">
