--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,28 +2,29 @@
 <section class="hero">
     <div>
         <img src="img/head.svg" class="profile">
-        <img src="img/logo.png" class="profile">
     </div>
-    <div class="me">
+    <div id="me">
         <div class="introduction">
             <h1>Hey, I'm Sree! 😎</h1>
             <h2>I'm a UX Designer.</h2>
             <p>I research, I analyze, I code, I test, I make things pretty, and most importantly – <b>I solve problems</b>.</p>   
         </div>
-        <div class="see-work">
-            <a href="#"><span>See my work <p id="arrow">⤵</p></span></a>
+        
+        <div id="see-work">
+                <div id="arrow">
+                   <div id="horizontal"><h3>Check out my work!</h3></div>
+                    <div id="straight">
+                        <div id="line">
+                            <div id="line-content"></div>
+                        </div>
+                        <div >
+                            <img src="img/down-arrow.svg" id="point">
+                        </div>
+                    </div>
+                </div>
         </div>    
     </div>
 </section>
-<section class="hero">
-    <div>
-        <img src="img/head.svg" class="profile">
-    </div>
-    <div>
-        <div class="introduction">
-            <h1>Hey, I'm Sree!</h1>
-            <h2>I'm a UX Designer.</h2>
-            <p>I research, I analyze, I code, I test, I make things pretty, and most importantly – <b>I solve problems.</b></p>   
-        </div>
-    </div>
+<section id="filler">
+    
 </section>
