--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,8 @@
                         <div id="line">
                             <div id="line-content"></div>
                         </div>
-                        <div >
+                        <div id="pointer">
+                            <div id="point-left"></div>
                             <img src="img/down-arrow.svg" id="point">
                         </div>
                     </div>
@@ -25,6 +26,6 @@
         </div>    
     </div>
 </section>
-<section id="filler">
-    
+<section id="my-work">
+    <h1>My Work</h1>
 </section>
