--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,4 +28,7 @@
 </section>
 <section id="my-work">
     <h1>My Work</h1>
+    <div class="photo">
+        <img id="dog-image" src="img/Photo.jpg">
+    </div>
 </section>
