--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -269,3 +269,26 @@
     line-height: 0;
   }
 
+  .photo {
+    margin: 50px auto;
+    border: 5px solid #fff;
+    width: 250px;
+    height: 250px;
+    position: relative;
+    box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.4), 0px 20px 10px rgba(0, 0, 0, 0.2);
+}
+#dog-image {
+    width: 250px;
+    height: 250px;
+}
+.photo:before {
+    content: "";
+    height: 25px;
+    width: 80px;
+    background-color: rgba(255, 255, 255, .3);
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    transform: translateX(-30%) translateY(10%) rotate(-45deg);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+}
