--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                             <div id="line-content"></div>
                         </div>
                         <div id="pointer">
-                            <div id="point-left"></div>
+                            <!-- <div id="point-left"></div> -->
                             <img src="img/down-arrow.svg" id="point">
                         </div>
                     </div>
@@ -27,8 +27,6 @@
     </div>
 </section>
 <section id="my-work">
-    <h1>My Work</h1>
-    <div class="photo">
-        <img id="dog-image" src="img/Photo.jpg">
-    </div>
+    <div class="title"><h1>My Work</h1></div>
+    <app-work-card></app-work-card>
 </section>
