--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -159,7 +159,7 @@
     margin-right: -2rem;
     display:table;
     padding-left: 2rem;
-   // border-radius: 0 2rem 0 0;
+    border-radius: 2px 1rem 0 2px;
     transition: width 800ms ease-in-out;
   }
 
@@ -226,7 +226,7 @@
   flex-direction: row-reverse;
   gap: 0;
   //margin-right:8rem; //toggle on when want to show point-right
-  width: 4rem; //toggle off when want to show point-left
+  //width: 4rem; //toggle off when want to show point-left
  }
 
   #point 
@@ -253,6 +253,8 @@
     }
   }
 
+ 
+
   #my-work
   {
     display: flex;
@@ -262,33 +264,20 @@
     height: 1000px;
   }
 
-  #my-work h1
+  .title
   {
-    -webkit-text-stroke-width: 4px;
-    -webkit-text-stroke-color: var(--primary);
-    line-height: 0;
+    width: 100%;
+    background-color: var(--primary--100);
   }
 
-  .photo {
-    margin: 50px auto;
-    border: 5px solid #fff;
-    width: 250px;
-    height: 250px;
-    position: relative;
-    box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.4), 0px 20px 10px rgba(0, 0, 0, 0.2);
-}
-#dog-image {
-    width: 250px;
-    height: 250px;
-}
-.photo:before {
-    content: "";
-    height: 25px;
-    width: 80px;
-    background-color: rgba(255, 255, 255, .3);
-    position: absolute;
-    top: -5px;
-    left: -5px;
-    transform: translateX(-30%) translateY(10%) rotate(-45deg);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
-}
+  .title h1
+  {
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: var(--primary--900);
+    color: var(--primary--900);
+    line-height: 0;
+    text-align:center; 
+    vertical-align: middle;
+  }
+
+  
