--- a/src/app/work-card/work-card.component.html
+++ b/src/app/work-card/work-card.component.html
@@ -1,7 +1,9 @@
 <section class="card-body">
     <img class="cover" src="cover/Ashby.png">
-    <h2>Title</h2>
-    <p>Description</p>
-    [tag]
+    <div class="details">
+        <h3 class="title">Ashby Confections</h3>
+        <p class="description">Description</p>
+        <span class="badge">Website Work</span>
+    </div>
 </section>
 
