--- a/src/app/work-card/work-card.component.scss
+++ b/src/app/work-card/work-card.component.scss
@@ -1,38 +1,131 @@
-.card-body {
-    margin: 50px auto;
-    border: 5px solid #fff;
+.card-body 
+{
+    transform-origin: top center;
+    border: .5rem solid var(--black);
     background: var(--white);
     width: auto;
     height: auto;
     position: relative;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.4), 0px 20px 10px rgba(0, 0, 0, 0.2);
+    transition: all 200ms ease-in-out;
+    border-radius: 5px;
 }
-.cover {
+
+.card-body:hover
+{
+    animation: shake 750ms ease-in-out;
+    background: var(--primary--50);
+}
+
+@keyframes shake 
+  {
+    0% 
+    {
+        transform: perspective(400px) rotateX(0deg);
+        box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.4), 0px 20px 10px rgba(0, 0, 0, 0.2);
+    }
+    30%
+    {
+        transform: perspective(400px) rotateX(2deg);
+        box-shadow: 0px 15px 12px rgba(0, 0, 0, 0.4), 0px 25px 15px rgba(0, 0, 0, 0.2);
+    }
+    50%
+    {
+        transform: perspective(400px) rotateX(-.5deg);
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3), 0px 1px 1px rgba(0, 0, 0, 0.1);
+    }
+    80%
+    {
+        transform: perspective(400px) rotateX(.5deg);
+        box-shadow: 0px 11px 8px rgba(0, 0, 0, 0.4), 0px 21px 11px rgba(0, 0, 0, 0.2);
+    }
+    100% 
+    {
+        transform: perspective(400px) rotateX(0deg);
+        box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.4), 0px 20px 10px rgba(0, 0, 0, 0.2);
+    }
+  }
+
+
+.cover 
+{
     width: 600px;
-    height: 450px;
-    border: solid 1px;
-    border-color: #22222240;
+    height: auto;
 }
-.card-body:before {
+
+
+
+.card-body:before 
+{
     content: "";
     height: 40px;
-    width: 100px;
+    width: 120px;
     background-color: rgba(255, 255, 255, .3);
     position: absolute;
     top: -5px;
     left: -5px;
     transform: translateX(-30%) translateY(10%) rotate(-45deg);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(1px);
 }
 
-.card-body:after {
+.card-body:after 
+{
   content: "";
   height: 40px;
-  width: 100px;
+  width: 120px;
   background-color: rgba(255, 255, 255, .3);
   position: absolute;
   top: -5px;
   right: -5px;
   transform: translateX(30%) translateY(10%) rotate(45deg);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(1px);
 }
+
+.details
+{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    padding-top: .5rem;
+    row-gap: 0;
+    width: auto;
+    //justify-content: flex-end;
+    align-items: flex-end;
+
+}
+
+.details .title
+{
+    line-height: 0;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--black);
+    color: var(--black);
+    width: 100%;
+   // border: solid 4px;
+}
+
+.details .description
+{
+    line-height: 0;
+    width: 100%;
+   // border: solid 4px;
+}
+
+.badge {
+    background-color: var(--primary--100);
+    color: white;
+    padding: 4px 8px;
+    text-align: center;
+    border-radius: 5px;
+    width: max-content;
+    padding-top: .5rem;
+
+    font-family: "Sen", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    color: var(--black);
+    font-size: 1.5rem;
+  }
