--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,5 +28,10 @@
 </section>
 <section id="my-work">
     <div class="title"><h1>My Work</h1></div>
-    <app-work-card></app-work-card>
+    <div id="work-container">
+        <app-work-card></app-work-card>
+        <app-work-card></app-work-card>
+        <app-work-card></app-work-card>
+        <app-work-card></app-work-card>
+    </div>
 </section>
