--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -280,4 +280,16 @@
     vertical-align: middle;
   }
 
+  #work-container
+  {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5rem;
+    justify-content: center;
+   // background: red;
+    margin-left: 4vw;
+    margin-right: 4vw;
+    margin-top: 4vw;
+  }
   
