--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
         </div>
         
         <div id="see-work">
-                <div id="arrow">
+                <div id="arrow" (click)="scrollto()">
                    <div id="horizontal"><h3>Check out my work!</h3></div>
                     <div id="straight">
                         <div id="line">
